src/app/biography-overview/biography-overview.component.scss
@import '../../common-vars.scss';

.circle {
  background-color: #fff;
  border-radius: 100%;
  height: 100px;
  width: 100px;
  overflow: hidden;
  border: 5px solid $primary-color;
}

.nav-content {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  padding-top: 100px;
  height: 100%;
}

.persons-box {
  overflow-y: auto;
  height: 930px;
  display: flex;
  flex-direction: row;
  // flex-wrap: wrap;
  // align-items: center;
  // align-content: space-between;
}

p.person-name {
  color: $primary-color;
}

